--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.7.0",
     "safe-eval": "^0.3.0",
     "serve-favicon": "~2.3.0",
+    "sleep": "^5.1.1",
     "socket.io": "^2.0.3",
     "uuid": "^3.1.0"
   },
